# donut

./: README_custom.md  eval.py  evaluate_vqa.py  lightning_module.py  notebook.ipynb  predict.py  pyproject.toml  sol.py  solvarg.yaml  test.py  train.py
config/: train_cord_custom.yaml  train_cord_custom_cpu.yaml
donut/: model.py  util.py
scripts/: prepare_invoice_dataset.py  prepare_json.py
