[tool.poetry]
name = "donut"
version = "0.1.0"
description = ""
authors = ["satoru814 <satoru-sakamoto@c-fo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
awswrangler = "^2.17.0"
aenum = "3.1.11"
aiobotocore = "2.4.0"
aiohttp = "3.8.1"
aioitertools = "0.11.0"
aiosignal = "1.2.0"
asn1crypto = "1.5.1"
asttokens = "2.0.8"
async-timeout = "4.0.2"
attrs = "22.1.0"
backcall = "0.2.0"
backoff = "2.2.1"
beautifulsoup4 = "4.11.1"
boto3 = "1.24.59"
botocore = "1.27.59"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
contourpy = "1.0.5"
cycler = "0.11.0"
debugpy = "1.6.3"
decorator = "5.1.1"
einops = "0.5.0"
entrypoints = "0.4"
et-xmlfile = "1.1.0"
executing = "1.1.1"
filelock = "3.8.0"
fonttools = "4.38.0"
frozenlist = "1.3.1"
fsspec = "2022.10.0"
gremlinpython = "3.6.1"
huggingface-hub = "0.10.1"
idna = "3.4"
ipykernel = "6.16.1"
ipython = "8.5.0"
isodate = "0.6.1"
jedi = "0.18.1"
jmespath = "1.0.1"
jsonpath-ng = "1.5.3"
jupyter-client = "7.4.3"
jupyter-core = "4.11.2"
kiwisolver = "1.4.4"
lxml = "4.9.1"
matplotlib = "3.6.1"
matplotlib-inline = "0.1.6"
multidict = "6.0.2"
nest-asyncio = "1.5.6"
numpy = "1.23.4"
openpyxl = "3.0.10"
opensearch-py = "2.0.0"
packaging = "21.3"
pandas = "1.5.1"
parso = "0.8.3"
pathlib = "1.0.1"
pathlibfs = "^0.3.0"
pexpect = "4.8.0"
pg8000 = "1.29.2"
pickleshare = "0.7.5"
pillow = "9.2.0"
ply = "3.11"
progressbar2 = "4.1.1"
prompt-toolkit = "3.0.31"
psutil = "5.9.3"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyarrow = "8.0.0"
pygments = "2.13.0"
pymysql = "1.0.2"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
python-utils = "3.3.3"
pytz = "2022.5"
pyyaml = "6.0"
pyzmq = "24.0.1"
redshift-connector = "2.0.909"
regex = "2022.9.13"
requests = "2.28.1"
requests-aws4auth = "1.1.2"
s3fs = "2022.10.0"
s3transfer = "0.6.0"
scramp = "1.4.2"
setuptools-scm = "7.0.5"
six = "1.16.0"
soupsieve = "2.3.2.post1"
stack-data = "0.5.1"
tokenizers = "0.13.1"
tomli = "2.0.1"
tornado = "6.2"
tqdm = "4.64.1"
traitlets = "5.5.0"
transformers = "4.23.1"
typing-extensions = "4.4.0"
urllib3 = "1.26.12"
wcwidth = "0.2.5"
wrapt = "1.14.1"
yarl = "1.8.1"
albumentations = "^1.3.0"
tensorboard = "^2.10.1"
timm = "^0.6.11"
zss = "^1.2.0"
nltk = "^3.7"
datasets = "^2.6.1"
sentencepiece = "^0.1.97"
pdf2image = "^1.16.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"